user stats added
